Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.1
-
None
-
Ubuntu 18.04
-
289a18f56fcb70b0c3d60a710ded7741f4c99dee (qt-creator/qt-creator/4.14)
Description
Hi!
Due to changes introduced in this* code review default FakeVim toggle shortcut (Alt+V, Alt+V) doesn't work.
Now it takes 3 Alt+V and an explicit mouse click. First Alt+V shortcut opens "View" menu, second and third toggles FakeVim. And you need to click inside the editor to actually edit some code
* https://codereview.qt-project.org/c/qt-creator/qt-creator/+/292891
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-25124 Alt-V Alt-V does not toggle fakevim anymore
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24694 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
321099,6 | FakeVim: Change shortcuts from Alt-V,X to Alt-Y,X | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |